<resources>
    <string name="app_name">ZaniBet</string>
    <string name="facebook_app_id" translatable="false">350682198676110</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb350682198676110</string>
    <string name="empty" translatable="false" />
    <string name="err_authentification_failled">Identifiant ou mot de passe incorrect.</string>
    <string name="err_title_oups">Ouups!</string>
    <string name="err_load_gameticket">Une erreur est survenue lors du chargement de la liste de ticket de jeu.</string>
    <string name="err_network">Les serveurs de <b>ZaniBet</b> ne sont pas accessibles. Merci de <b>vérifiez votre connexion internet</b> ou de réessayez ultérieurement.</string>
    <string name="err_ads_loading">La vidéo n\'a pas encore fini de charger, merci de réessayer dans quelques instants.</string>
    <string name="err_no_ads_available">Aucune vidéo publicitaire n\'est disponible pour le moment. Merci de ré-essayer ultérieurement.</string>
    <string name="ok_exclamation">OK!</string>
    <string name="empty_gameticket">Aucun ticket de jeu n\'est disponible pour l\'instant !</string>
    <string name="empty_gameticket_single">Il n\'y a aucun match à pronostiquer pour aujourd\'hui.\nRevenez demain !</string>
    <string name="empty_grille_waiting">Vous n\'avez aucune grille de jeu en attente de résultat. Validez quotidiennement les grilles disponibles, pour augmenter vos gains.</string>
    <string name="empty_grille_loose">Vous n\'avez aucune grille de pronostics terminée. Validez quotidiennement les grilles de jeu disponible et retrouvez vos résultats sur cet écran.</string>
    <string name="empty_grille_win">Vous n\'avez pas encore remporté de jackpot. Validez quotidiennement les grilles de jeu disponible, pour augmenter vos chances de remporter du cash.</string>
    <string name="empty_grille_simple">Vous n\'avez aucune grille de pronostics terminée. Faites vos pronostics quotidiennement sur les matchs de la journée et accumulez des ZaniCoins !</string>
    <string name="empty_reward">Aucune récompense n\'est disponible dans la boutique.</string>
    <string name="empty_payout">Vous n\'avez aucun gain en attente de paiement.</string>
    <string name="empty_help">Cette section d\'aide est vide.</string>
    <string name="maintenance_mode">ZaniBet est temporairement en maintenance, merci de revenir ultérieurement pour retrouver toutes les fonctionnalités de l\'application.</string>
    <string name="edit_err_password">Mot de passe invalide</string>
    <string name="edit_err_email">Adresse email invalide.</string>
    <string name="rules"><![CDATA[<b>ZaniBet est un jeu réservé aux adultes de 18 ans et plus.</b><br><br><h1>Ticket « MULTI »</h1>1 - Chaque semaine, des tickets de jeu correspondant à différents championnats de football sont ouvert aux joueurs. Le but du jeu est de trouver les bons résultats pour une série de matchs présents dans un ticket.<br><br>2 – Les résultats d’un match sont basés sur le temps réglementaire et ne prennent donc pas en compte d’éventuelles prolongations/tirs au but.<br>Dans le cas où <b>un match présent dans le ticket de jeu est annulé</b> : votre pronostic pour celui-ci sera considéré comme gagnant.<br>Si <b>un match ou plus sont annulés</b> (non reporté) dans un ticket de jeu : le jackpot du ticket est annulé et les grilles ayant été jouées seront récompensées uniquement en ZaniCoins.<br><br>3 – Pour valider une grille pour un ticket, vous devez cocher la case correspondant à votre pronostique pour toutes les lignes de match.<br>1 = victoire pour l’équipe à domicile<br>N = match nul<br>2 = victoire pour l’équipe visiteuse<br><br>4 – Votre grille sera validée à partir du moment où vous aurez coché au moins pronostique par ligne de match et visionner une publicité vidéo jusqu’à la fin.<br><br>5 – Le bouton « Flash » permet de remplir des pronostics aléatoires pour tous les matchs d’une grille.<br><br>6 – Le bouton « Effacer » réinitialise tous les pronostics indiqués pour une grille.<br><br>7 – Les joueurs ayant réalisé une <b>grille sans-faute pour un ticket de jeu</b>, se partagent le jackpot ! Si un joueur valide plusieurs grilles sans-faute pour un ticket de jeu, il empoche une plus grande part du jackpot.<br><br><b>Exemple :</b> 10 grilles gagnantes ont été validé pour le ticket « Ligue 1 Jackpot 500€ ». Parmi les 10 grilles gagnantes, 2 ont été validées par Pierre. Le jackpot est donc divisé par 10 et Pierre remporte 50€ !<br><br>8 – Tous les paiements des gains se font par PayPal sous un délai de 30 jours.<br><br>9 – Même si une grille jouée n’est pas sans faute, chaque pronostic gagnant rapporte des points de fidélité (ZaniCoin). <b>Ces points peuvent être par la suite échangés dans la boutique contre du cash.</b>]]></string>
    <string name="onboarding1_content">Pronostiquez les matchs des plus grandes compétitions de football, accumulez des points et gagnez des cadeaux et du cash ! Bien sûr, c’est gratuit.</string>
    <string name="onboarding2_title">FAITES VOS PRONOSTICS</string>
    <string name="onboarding2_content">"Remplissez simplement vos grilles de pronostics et simulez vos paris sportif, en sélectionnant votre prédiction pour chaque match. Attention, une grille sans faute rapporte le jackpot ! "</string>
    <string name="onboarding3_title">TOUJOURS GAGNANT !</string>
    <string name="onboarding3_content">Complétez toutes les semaines vos grilles et paris pour accumulez un maximum de ZaniCons ! Même si vous ne faîtes pas de sans faute, les bons pronostics sont toujours récompensés.</string>
    <string name="play">Jouer</string>
    <string name="err_edit_required">Ce champ est requis</string>
    <string name="err_not_enough_fund">Vous ne disposez pas de suffisamment de ZaniCoins pour acquérir cette récompense.</string>
    <string name="err_edit_paiement_info">La modification de vos informations personnelles a échouée.</string>
    <string name="about_content">ZaniBet est un jeu de pronostic sportif gratuit, qui propose aux joueurs de gagner de l\'argent pour leurs prédictions réussies.</string>
    <string name="err_unfull_grille">Vous devez sélectionner un pronostic pour chaque match afin de pouvoir valider votre grille.</string>
    <string name="dlg_content_payout_reward">Votre demande de paiement c\'est déroulée avec succès. L\'équipe de ZaniBet traitera votre requête dans les plus bref délais.</string>
    <string name="ldg_content_payout_reward">Votre demande de paiement est en cours, merci de patienter…</string>
    <string name="email_address">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="signin">Connexion</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="or">où</string>
    <string name="create_new_account">Créer un nouveau compte</string>
    <string name="username">Pseudonyme</string>
    <string name="signup">M\'inscrire</string>
    <string name="already_signup">Déjà inscrit ? Me connecter</string>
    <string name="create_account">Créer un compte</string>
    <string name="restore_my_password">Restaurer mon mot de passe</string>
    <string name="cant_restore_password">Impossible de récupérer votre compte ?</string>
    <string name="ldg_content_signin">Connexion en cours, merci de patienter…</string>
    <string name="ldg_title_signin">Authentification</string>
    <string name="ldg_content_signup">Création de votre ZaniBet en cours, merci de patienter…</string>
    <string name="ldg_title_signup">Enregistrement d\'un compte</string>
    <string name="youha">Youha !</string>
    <string name="dlg_content_restore_password">Vous allez recevoir les instructions de restauration de votre mot de passe par email d\'ici quelques minutes.</string>
    <string name="ldg_content_restore_password">Demande de restauration du mot de passe en cours…</string>
    <string name="ldg_title_restore_password">Restauration du mot de passe</string>
    <string name="nb_grilles_play">"Nombre de grilles jouées : "</string>
    <string name="n_match_day">%1$dème journée de championnat</string>
    <string name="grille_play_limit">Date limite de validation des grilles :</string>
    <string name="grille_earn">Gain : %1$.2f€</string>
    <string name="nb_prono_win">Nombre de pronostics gagnés %1$d/%2$d</string>
    <string name="week">" J"</string>
    <string name="result_at">Résultat le %1$s</string>
    <string name="potential_earn">Gain potentiel : %1$d€</string>
    <string name="tab_grilles">Grilles</string>
    <string name="tab_play">Jouer</string>
    <string name="tab_shop">Boutique</string>
    <string name="tab_profile">Profil</string>
    <string name="amount_int" translatable="false">%1$d€</string>
    <string name="status_waiting_paiement"><![CDATA[<b>Status :</b> En attente de paiement]]></string>
    <string name="status_cancel"><![CDATA[<b>Status :</b> Annulé]]></string>
    <string name="status_paid"><![CDATA[<b>Status :</b> Paiement des gains effectué]]></string>
    <string name="payout_for_grid">Paiement pour une grille</string>
    <string name="payout_for_reward">Paiement pour une récompense</string>
    <string name="shop_reward">%1$s %2$.2f€</string>
    <string name="title_about">À propos de ZaniBet</string>
    <string name="stay_in_touch">Restons connecté</string>
    <string name="title_rules">Règle du jeu</string>
    <string name="title_grille">Grille %1$s</string>
    <string name="nb_played_grid">Grilles jouées : %1$d/%2$d</string>
    <string name="jackpot_earn">Bravo, vous avez remporté une partie du jackpot !</string>
    <string name="nb_prono_win2">Vous avez %1$d pronostics gagnant. Récompense : %2$d ZaniCoins.</string>
    <string name="title_payout_history">Historique des paiements</string>
    <string name="title_profile">Mon profil</string>
    <string name="title_shop">Boutique</string>
    <string name="shop_description">Accumulez des ZaniCoins en jouant vos grilles et durant les évènements.</string>
    <string name="cancel">Annuler</string>
    <string name="yes">Oui</string>
    <string name="reward">Récompense</string>
    <string name="reward_confirm">Souhaitez vous échanger %1$.0f ZaniCoins contre un paiement %2$s de %3$.2f€ ?</string>
    <string name="incomplet_grid">Grille incomplète</string>
    <string name="select_all_bet">Vous devez sélectionner un pronostic pour chaque match afin de pouvoir valider votre grille.</string>
    <string name="menu_rules">Règles du jeu</string>
    <string name="amount_zanicoins" translatable="false">%1$d ZANICOINS</string>
    <string name="cost_jeton">%1$d Jeton</string>
    <string name="zanicoin_earn_per_bet">%1$d ZaniCoins par pronostic gagnant.</string>
    <string name="what_you_win">Ce que vous gagnez</string>
    <string name="invite_friends_desc"><![CDATA[Devenez ambassadeur de ZaniBet et invitez vos amis à rejoindre l\'application en partageant votre code d\'invitation ! Vos amis <b>recoivent %1$d ZaniCoins en validant votre code</b>.]]></string>
    <string name="invite_reward"><![CDATA[A chaque fois qu\'un de vos amis valide une grille sans faute pour un ticket \"SIMPLE\", <b>vous recevez %1$d%% de ses gains en ZaniCoins</b>.<br>Vous recevez également <b>%2$d ZaniCoins</b> pour chaque ami qui valide une grille pour un ticket \"MULTI\".]]></string>
    <string name="share_my_code">Partager mon code</string>
    <string name="rewards">Récompenses</string>
    <string name="ticket_open_date">Date d\'ouverture du ticket</string>
    <string name="ticket_limit_date">Date limite de validation des pronostics</string>
    <string name="grid_cost">Coût de validation d\'une grille</string>
    <string name="bonus">Bonus</string>
    <string name="status">Status</string>
    <string name="ticket_result_date">Date des résultats (prévisionnel)</string>
    <string name="onboarding1_title">VOS CHAMPIONNATS FAVORIS</string>
    <string name="set_custom_code">Personnaliser mon code</string>
</resources>